--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,17 @@
             <artifactId>gson</artifactId>
             <version>2.10</version>
         </dependency>
-
+<!--        <dependency>-->
+<!--            <groupId>com.machinezoo.sourceafis</groupId>-->
+<!--            <artifactId>sourceafis</artifactId>-->
+<!--            <version>3.17.1</version>-->
+<!--        </dependency>-->
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>31.1-jre</version>
+        </dependency>
 
     </dependencies>
 
