--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "java.compile.nullAnalysis.mode": "automatic",
-    "files.autoSave": "afterDelay"
+    "files.autoSave": "onWindowChange"
 }
